# braccio_control

./: .gitignore  .gitmodules  README.md  avvio.sh  moveit_commander.sh  pixi.toml
.devcontainer/: Dockerfile  devcontainer.json
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/pkgconfig/: model.pc  model_arm_result.pc  model_moveit.pc  servo_control.pc
devel/share/model/cmake/: modelConfig.cmake
devel/share/model_arm_result/cmake/: model_arm_resultConfig.cmake
devel/share/model_moveit/cmake/: model_moveitConfig.cmake
devel/share/servo_control/: servo.elf  servo.hex
devel/share/servo_control/cmake/: servo_controlConfig.cmake
doc/doc/: Doxyfile  Makefile  cmake_install.cmake  kdl.tag
doc/doc/api/html/: annotated.html  articulatedbodyinertia_8cpp.html  articulatedbodyinertia_8cpp__incl.md5  articulatedbodyinertia_8hpp.html  articulatedbodyinertia_8hpp__dep__incl.md5  articulatedbodyinertia_8hpp__incl.md5  articulatedbodyinertia_8hpp_source.html  chain_8cpp.html  chain_8cpp__incl.md5  chain_8hpp.html  chain_8hpp__dep__incl.md5  chain_8hpp__incl.md5  chain_8hpp_source.html  (+897 more)
src/braccio_control/: CMakeLists.txt  README.md  braccio_control.xml  package.xml  r6bot.gv  r6bot.urdf  setup.cfg  setup.py
src/braccio_control/braccio_control/: send_trajectory_py.py
src/braccio_control/bringup/config/: braccio_controller.yaml  r6bot_controller.yaml
src/braccio_control/bringup/launch/: r6bot_controller.launch.py  send_trajectory.launch.py
src/braccio_control/config/: joy_arm_controller.yaml
src/braccio_control/controller/: braccio_controller.cpp
src/braccio_control/controller/include/braccio_control/: braccio_controller.hpp
src/braccio_control/controller/include/ros2_control_braccio/: braccio_controller.hpp
src/braccio_control/description/ros2_control/: braccio.ros2_control.xacro
src/braccio_control/description/urdf/: braccio.urdf.xacro  r6bot.urdf.xacro
src/braccio_control/hardware/: braccio_hardware.cpp
src/braccio_control/hardware/include/braccio_control/: braccio_hardware.hpp
src/braccio_control/hardware/include/ros2_control_braccio/: braccio_hardware.hpp
src/braccio_control/reference_generator/: send_trajectory copy 2.cpp  send_trajectory copy 3.cpp  send_trajectory copy 4.cpp  send_trajectory copy.cpp  send_trajectory.cpp
src/braccio_control/rviz/: view_robot.rviz
src/braccio_control/test/: test_braccio_controller_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
src/braccio_ctrl_firmware/: CMakeLists.txt  README.md  platformio.ini
src/braccio_ctrl_firmware/include/: pca9685_i2c_hal.h  secrets_example.h  wifi_connection.h  zenoh_base.h
src/braccio_ctrl_firmware/lib/: zenoh-pico
src/braccio_ctrl_firmware/src/: main.c  main_zenoh.c  pca9685_i2c_hal.c  wifi_connection.c  zenoh_base.c
src/braccio_moveit/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/braccio_moveit/config/: braccio.ros2_control.xacro  braccio.srdf  braccio.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml
src/braccio_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/braccio_simulation/: CMakeLists.txt  READEME.md  package.xml
src/braccio_simulation/launch/: gz_spawn.launch.py  view_braccio.launch.py  visu.launch.py
src/braccio_simulation/rviz/: view_robot.rviz  visu.rviz
src/braccio_simulation/src/: get_spatial_diff_frames.py
src/description/launch/: view_robot.launch.py
src/joy_control/: CMakeLists.txt  package.xml
src/joy_control/doc/move_group_interface/: CMakeLists.txt
src/joy_control/doc/move_group_interface/src/: joy_braccio.cpp  joy_to_arm.cpp  move_group_interface_tutorial.cpp
src/joy_control/launch/: move_test_cpp_filerun.launch
src/joy_control/src/: joy_to_arm.cpp
src/model_arm/3Dparts/: tower-pro-mg_996r-servo-motor-v3.step  tower-pro-mg_996r-servo-motor-v3.stl
src/model_arm/FreeCADmodel/: ModelARM.FCStd
src/model_arm/model/: arm1.urdf  model_arm.urdf  model_arm_giusto.urdf
src/model_arm/modello/: arm.stl  model_arm_gazebo.urdf  model_arm_giusto.urdf  test_visivo.sh
src/model_arm_result/: .setup_assistant  CMakeLists.txt  package.xml
src/model_arm_result/config/: arm.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
src/model_arm_result/launch/: arm_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/model_moveit/: .setup_assistant  CMakeLists.txt
src/model_moveit/config/: arm.srdf  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
src/model_moveit/launch/: arm_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  move_test_cpp_filerun.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/servo_control/: CMakeLists.txt  arm.urdf  arm1.urdf  package.xml
src/servo_control/firmware/: CMakeLists.txt  serial_node.py  servo.cpp  servo_act.ino
src/servo_control/mesh/: base.stl  prova.dae
src/test_zenoh/: CMakeLists.txt  README.md  pixi.toml  test_zenohcpp_pub.cpp
src/test_zenoh/src/: common.py  config copy.json5  publish_test_esp32 copy.py  publish_test_esp32.py  publish_test_esp32_old.py  sub_test_esp32.py  test_sub.c  test_sub_old.c
(+144 files in other folders)
