<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>braccio_control</name>
  <version>0.0.0</version>
  <description>control the 6Dof robot</description>

  <license>Apache-2.0</license>
  <maintainer email="nope@gmail.com">michbelle</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ros2_control_cmake</build_depend>

  <depend>backward_ros</depend>
  <depend>control_msgs</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>kdl_parser</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp</depend>
  <depend>realtime_tools</depend>
  <depend>trajectory_msgs</depend>

  <depend>joy_linux</depend>
  <depend>joy</depend>
  <depend>sensor_msgs</depend>

  <build_depend>urdf</build_depend>
  <exec_depend>urdf</exec_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!-- <exec_depend>ros2_control_demo_description</exec_depend> -->
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <depend>rclpy</depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- <build_depend>ament_python</build_depend> -->
  <!-- <exec_depend>rclpy</exec_depend> -->
  <exec_depend>std_msgs</exec_depend>



  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>liburdfdom-tools</test_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <build_type>ament_cmake_python</build_type>
    <build_type>ament_python</build_type> -->
  </export>
</package>
