<?xml version="1.0"?>
<package format="2">
  <name>joy_control</name>
  <version>0.0.0</version>
  <description>
     run for the fucking moveit
  </description>
  <author email="mi@fg.dg">mb</author>
  <maintainer email="mi@fg.dg">mb</maintainer>

  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>

</package>