if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_SOURCE_DIR})
    # Settings when 'examples' is the root project
    cmake_minimum_required(VERSION 3.20)
    project(zenohpico_unix LANGUAGES C)
    include(cmake/helpers.cmake)
    set_default_build_type(Release)
    configure_include_project(ZENOHPICO zenohpico zenohpico::lib ".." zenohpico "https://github.com/eclipse-zenoh/zenoh-pico" "")
    add_custom_target(src ALL)

    set(CHECK_THREADS "ON")
    if(CMAKE_SYSTEM_NAME MATCHES "Linux")
        # keep ON
    elseif(POSIX_COMPATIBLE)
        set(CHECK_THREADS "OFF")
    elseif(CMAKE_SYSTEM_NAME MATCHES "PICO")
        set(CHECK_THREADS "OFF")
    endif()

    set(THREADS_PREFER_PTHREAD_FLAG ON)
    if(CHECK_THREADS)
        find_package(Threads REQUIRED)
    endif()
else()
    message(STATUS "zenoh-pico src")
    add_custom_target(src)

    set(THREADS_PREFER_PTHREAD_FLAG ON)
    if(CHECK_THREADS)
        find_package(Threads REQUIRED)
    endif()
endif()

function(add_example name path)
    add_executable(${name} ${path})
    set_property(TARGET ${name} PROPERTY C_STANDARD 11)
    target_link_libraries(${name} PRIVATE zenohpico::lib)
    cmake_parse_arguments(EX "THREADS" "" "" ${ARGN})
    if(EX_THREADS AND CHECK_THREADS)
        target_link_libraries(${name} PRIVATE Threads::Threads)
    endif()
    add_dependencies(src ${name})
endfunction()

if(UNIX)
    if(CMAKE_C_STANDARD MATCHES "99")
        # add_example(z_sub src/z_sub.c)
    else()
        add_example(test_sub src/test_sub.c)
        add_example(test_sub2 src/test_sub_old.c)
    endif()
elseif(MSVC)
endif()
